小车整体运行代码/src/E2E-Sample/ros2_robot_arm/ros2_ws/log/build_2025-09-05_10-19-23/dofbot_garbage_yolov5/stderr.log
package init file 'dofbot_garbage_yolov5/utils/__init__.py' not found (or not a regular file)
  File "/root/ascend-devkit/src/E2E-Sample/ros2_robot_arm/ros2_ws/install/dofbot_garbage_yolov5/lib/python3.10/site-packages/dofbot_garbage_yolov5/main.py", line 187
    Finddegree=
               ^
SyntaxError: invalid syntax

